# rust_blog

./: .cursorrules  .env  .gitignore  API_DOCUMENTATION.md  Cargo.toml  check_output.txt  db  db-shm
.agent/rules/: architecture.md  coding_standards.md  database_schema.md  language_preference.md  naming_conventions.md  openapi_standards.md  tech_stack.md  testing_standards.md  workflow.md
migrations/2025-12-19-083930-0000_create_count/: down.sql  up.sql
migrations/2025-12-20-013323-0000_user/: up.sql
migrations/2025-12-21-092335-0000_blog/: down.sql  up.sql
migrations/2025-12-21-142604-0000_alter_blog_add_fields/: down.sql  up.sql
migrations/2025-12-22-024032-0000_create_projects_stacks_tables/: down.sql  up.sql
migrations/2025-12-22-041326-0000_create_portfolios/: down.sql  up.sql
migrations/2025-12-24-021550-0000_create_profiles/: down.sql  up.sql
migrations/2025-12-27-133217-0000_rename_portfolios_to_portofolios/: down.sql  up.sql
migrations/2025-12-27-142416-0000_add_slug_to_portofolios_final/: down.sql  up.sql
migrations/2025-12-27-143626-0000_add_slug_to_projects/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/app/: mod.rs
src/app/drivers/: mod.rs  openapi.rs  routes.rs
src/app/drivers/middlewares/: auth.rs  state.rs
src/app/features/: mod.rs
src/app/features/auth/: mod.rs
src/app/features/blog/: mod.rs
src/test/: auth.rs  blog.rs  category.rs  helpers.rs  mod.rs  portfolio.rs  portofolio.rs  profile.rs  projects.rs  tag.rs
src/utils/: db.rs  di.rs  email.rs  error_response.rs  mod.rs  success_response.rs  token.rs
(+96 files in other folders)
