[package]
name = "myblog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
serde = "1.0.228"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
serde_json = "1.0.145"
actix-http = "3.11.2"

[dev-dependencies]
serial_test = "3.2.0"
